Fixed picture on Safari

--- a/styles.css
+++ b/styles.css
@@ -564,6 +564,7 @@ body {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+	max-width: 650px;
 }
 
 .contentDiv p {
